--- a/about.html
+++ b/about.html
@@ -245,11 +245,15 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="footer-copyright">
                         <ul class="social-icon">
-                            <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
-                            <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="0.4s"></a></li>
-                            <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="0.6s"></a></li>
-                            <li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="0.8s"></a></li>
-                            <li><a href="#" class="fa fa-dribbble wow fadeInUp" data-wow-delay="1s"></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/PANCITAPINTADA"
+                                    class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
+
+                            <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx"
+                                    class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
+                            <li><a href="mailto:badtz_9@hotmail.com" class="fa fa-envelope-o wow fadeInUp"
+                                    data-wow-delay="0.6s"></a></li>
+                            <li><a target="_blank" href="https://wa.me/+525549650698"
+                                    class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
