--- a/contact.html
+++ b/contact.html
@@ -140,24 +140,14 @@
                 <br>
                 <br>
                 <div class="wow fadeInUp col-md-8 col-sm-8" data-wow-delay="0.4s">
-                    <form action="contact.php" method="post">
-                        <div class="col-md-6 col-sm-6">
-                            <input type="text" class="form-control" placeholder="Tu nombre" required>
-                        </div>
-
-                        <div class="col-md-6 col-sm-6">
-                            <input type="email" class="form-control" placeholder="Tu email" required>
-                        </div>
-
-                        <div class="col-md-12 col-sm-12">
-                            <input type="tel" class="form-control" placeholder="Tu telefono" required>
-                            <textarea class="form-control" placeholder="Tu mensaje" rows="6" required></textarea>
-                        </div>
-
-                        <div class="col-md-4 col-sm-6">
-                            <input type="submit" class="form-control" value="Enviar mensaje">
-                        </div>
-                    </form>
+                    <!-- form.123formbuilder.com script begins here -->
+                    <iframe allowTransparency="true" style="min-height:1200px; height:inherit; overflow:auto;"
+                        width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0"
+                        frameborder="0" src="https://form.123formbuilder.com/my-contact-form-5771261.html">
+                        <p>Your browser does not support iframes. The contact form cannot be displayed. Please use
+                            another contact method (phone, fax etc)</p>
+                    </iframe>
+                    <!-- form.123formbuilder.com script ends here -->
                 </div>
 
             </div>
@@ -175,11 +165,15 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="footer-copyright">
                         <ul class="social-icon">
-                            <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
-                            <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="0.4s"></a></li>
-                            <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="0.6s"></a></li>
-                            <li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="0.8s"></a></li>
-                            <li><a href="#" class="fa fa-dribbble wow fadeInUp" data-wow-delay="1s"></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/PANCITAPINTADA"
+                                    class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
+
+                            <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx"
+                                    class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
+                            <li><a href="mailto:badtz_9@hotmail.com" class="fa fa-envelope-o wow fadeInUp"
+                                    data-wow-delay="0.6s"></a></li>
+                            <li><a target="_blank" href="https://wa.me/+525549650698"
+                                    class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
