--- a/service.html
+++ b/service.html
@@ -88,21 +88,22 @@
 
     <!-- Home Section -->
 
-    <section id="home" class="main-service" >
+    <section id="home" class="main-service">
         <div class="container">
             <div class="row">
 
                 <div class="col-md-12 col-sm-12">
                     <h1 class="wow fadeInUp head" data-wow-delay="0.6s">¿Qué hacemos?</h1>
-                    <img class="wow fadeInUp "
-                        src="img/BELLYBABY LOGOTIPO.png" width="40%" alt="" srcset=""
+                    <img class="wow fadeInUp " src="img/BELLYBABY LOGOTIPO.png" width="40%" alt="" srcset=""
                         style="filter: drop-shadow(5px 5px 5px #222);">
-                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Nuestra mayor preocupación es poder complacer a todas las futuras mamis que confían en nosotros, por esa razón siempre buscamos realizar un diseño personalizado</p>
+                    <p class="wow fadeInUp lr-pd" data-wow-delay="0.8s">Nuestra mayor preocupación es poder complacer a
+                        todas las futuras mamis que confían en nosotros, por esa razón siempre buscamos realizar un
+                        diseño personalizado</p>
                 </div>
 
             </div>
         </div>
-        
+
     </section>
 
     <div style="background-color:#c9a7c1 ;">
@@ -129,7 +130,8 @@
                     <div class="bg-white">
                         <img src="img/pregnant.png" width="50%" alt="" srcset="">
                         <h3>Belly Painting</h3>
-                        <p class="small">El diseño plasmado en la barriga de la mujer hace referencia a las preferencias de esta, del padre o incluso de la familia entera</p>
+                        <p class="small">El diseño plasmado en la barriga de la mujer hace referencia a las preferencias
+                            de esta, del padre o incluso de la familia entera</p>
                     </div>
                 </div>
 
@@ -137,7 +139,8 @@
                     <div class="bg-white">
                         <img src="img/splash.png" width="50%" alt="" srcset="">
                         <h3>Revelado del sexo</h3>
-                        <p class="small">Planeamos para ti, una divertida y emotiva didáctica, con la que reveleras el sexo de tu bebe a tus familiares y amigos</p>
+                        <p class="small">Planeamos para ti, una divertida y emotiva didáctica, con la que reveleras el
+                            sexo de tu bebe a tus familiares y amigos</p>
                     </div>
                 </div>
 
@@ -145,7 +148,8 @@
                     <div class="bg-white">
                         <img src="img/camara.png" width="50%" alt="" srcset="">
                         <h3>Fotografía</h3>
-                        <p class="small">Sesiones fotograficas para inciar tu álbum de recuerdos, de esta etapa tan impórtate para ti y tu bebe</p>
+                        <p class="small">Sesiones fotograficas para inciar tu álbum de recuerdos, de esta etapa tan
+                            impórtate para ti y tu bebe</p>
                     </div>
                 </div>
 
@@ -153,7 +157,8 @@
                     <div class="bg-white">
                         <img src="img/escultura.png" width="50%" alt="" srcset="">
                         <h3>Escultura</h3>
-                        <p class="small">Realizamos moldes en lleso de tu pancita, para después adornarla con los motivos que te gusten y así conserves por más tiempo el recuerdo de tu embarazo </p>
+                        <p class="small">Realizamos moldes en lleso de tu pancita, para después adornarla con los
+                            motivos que te gusten y así conserves por más tiempo el recuerdo de tu embarazo </p>
                     </div>
                 </div>
 
@@ -165,7 +170,7 @@
                     </div>
                 </div> -->
 
-            <!--       <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.2s">
+                <!--       <div class="wow fadeInUp col-md-4 col-sm-6" data-wow-delay="1.2s">
                     <div class="bg-white">
                         <i class="fa fa-globe"></i>
                         <h3>24 Support</h3>
@@ -209,11 +214,15 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="footer-copyright">
                         <ul class="social-icon">
-                            <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
-                            <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="0.4s"></a></li>
-                            <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="0.6s"></a></li>
-                            <li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="0.8s"></a></li>
-                            <li><a href="#" class="fa fa-dribbble wow fadeInUp" data-wow-delay="1s"></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/PANCITAPINTADA"
+                                    class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
+
+                            <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx"
+                                    class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
+                            <li><a href="mailto:badtz_9@hotmail.com" class="fa fa-envelope-o wow fadeInUp"
+                                    data-wow-delay="0.6s"></a></li>
+                            <li><a target="_blank" href="https://wa.me/+525549650698"
+                                    class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
