--- a/index.html
+++ b/index.html
@@ -496,9 +496,9 @@
     </section>
 
     <!--  -->
-    <div class='hide' id='whatsapp-chat'>
+    <!-- <div class='hide' id='whatsapp-chat'>
         <div class='home-chat'>
-            <!-- Info Contact Start by bloggerbyte.net -->
+           
             <div class='informasi'>
                 <div class='info-avatar'><img alt='avatar'
                         src='https://1.bp.blogspot.com/-kpjhY-o_YCg/XnV_BN6r2OI/AAAAAAAACdw/ghX2E8nUDpwrOyJ7VNi08okrvSSXcwjMwCLcBGAsYHQ/s1600/cs.png'
@@ -583,7 +583,7 @@
                 </span>
             </a>
         </div>
-    </div>
+    </div> -->
     <!-- Footer Section -->
 
     <footer>
@@ -593,13 +593,13 @@
                 <div class="col-md-12 col-sm-12">
                     <div class="footer-copyright">
                         <ul class="social-icon">
-                            <li><a href="https://www.facebook.com/PANCITAPINTADA" class="fa fa-facebook wow fadeInUp"
+                            <li><a target="_blank" href="https://www.facebook.com/PANCITAPINTADA" class="fa fa-facebook wow fadeInUp"
                                     data-wow-delay="0.2s"></a></li>
-                            <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="0.4s"></a></li>
-                            <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="0.6s"></a></li>
-                            <li><a href="badtz_9@hotmail.com" class="fa fa-mail-forward wow fadeInUp"
-                                    data-wow-delay="0.8s"></a></li>
-                            <li><a href="55 4965 0698" class="fa fa-whatsapp wow fadeInUp" data-wow-delay="1s"></a></li>
+                            
+                            <li><a target="_blank" href="https://www.instagram.com/bellypaintcdmx" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.4s"></a></li>
+                            <li><a href="mailto:badtz_9@hotmail.com" class="fa fa-envelope-o wow fadeInUp"
+                                    data-wow-delay="0.6s"></a></li>
+                            <li><a target="_blank" href="https://wa.me/+525549650698" class="fa fa-whatsapp wow fadeInUp" data-wow-delay="0.8s"></a></li>
                         </ul>
                         <p class="small">Creado por Marko</p>
                     </div>
