--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="col-md-12 col-sm-12">
 
                     <center>
-                        <img src="img/BELLYBABY LOGOTIPO.png" alt="" width="50%"
+                        <img src="img/BELLYBABY LOGOTIPO.png" class="lazyload" alt="" width="50%"
                             style="filter: drop-shadow(2.5px 2.5px 2.5px rgb(77, 77, 77));">
                     </center>
                     <h1 class="wow fadeInUp head" data-wow-delay="0.6s">PINCELADAS PARA TI Y TU BEBÉ</h1>
@@ -186,7 +186,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_1.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_1.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -197,7 +197,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/foto_1.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/foto_1.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -208,7 +208,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_2.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_2.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -219,7 +219,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/escultura_1.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/escultura_1.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -231,7 +231,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_4.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_4.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -241,7 +241,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_5.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_5.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -252,7 +252,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_12.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_12.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -264,7 +264,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/foto_2.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/foto_2.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -275,7 +275,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_3.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_3.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -286,7 +286,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_6.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_6.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -297,7 +297,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/escultura_3.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/escultura_3.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -308,7 +308,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_7.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_7.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -328,7 +328,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/escultura_2.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/escultura_2.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -338,7 +338,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_9.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_9.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -348,7 +348,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_10.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_10.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -358,7 +358,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/belly_11.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/belly_11.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -370,7 +370,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/foto_3.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/foto_3.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -380,7 +380,7 @@
                                             <div class="portfolio-item-hover">
                                                 <i class="fa fa-plus"></i>
                                             </div>
-                                            <img src="img/foto_4.jpg" class="img-responsive" alt="Portfolio">
+                                            <img src="img/foto_4.jpg" class="img-responsive lazyload" alt="Portfolio">
                                         </a>
                                     </div>
                                 </div>
@@ -617,6 +617,7 @@
 
     <!-- SCRIPTS -->
 
+    <script src="js/lazyload.min.js" async></script>
     <script src="js/jquery.js"></script>
     <script src="js/js.js"></script>
     <script src="js/bootstrap.min.js"></script>
